fix: Allow keymapper to remove root items